Styling - made image modal input form not have margin top, to align with img info when not editing. made modal editor submit and cancel buttons have a static height so they don't shrink when container wraps on small screens. made home page Try These <ul> flex-wrap and Try These: have no wrap to avoid Try These: wrapping on smaller screens. made image-view-page like button text black to override safari turning it blue

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1621,10 +1621,14 @@ button {
   line-height: 1;
   margin: auto;
   display: flex;
-  gap: 0.3rem;
+  gap: 0.5rem;
+}
+.carousel__overlay-categories p {
+  white-space: nowrap;
 }
 .carousel__overlay-categories ul {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .carousel__overlay-categories a {
@@ -5476,7 +5480,7 @@ button {
 .image-select-modal__img-info-container form {
   /* background-color: red; */
   margin: 0;
-  margin-top: 2.8rem;
+  /* margin-top: 2.8rem; */
   padding: 0;
 }
 .image-select-modal__img-info-container form input {
@@ -5611,6 +5615,7 @@ button {
   font-weight: 500;
   line-height: 1;
   padding: 0.25rem 0.5rem;
+  height: 33.33px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -5905,6 +5910,7 @@ button {
   }
 }
 .image-view-page__main-like-button-text {
+  color: #000;
 }
 .image-view-page__download-button {
   display: flex;
